--- a/milestone_4.ipynb
+++ b/milestone_4.ipynb
@@ -634,28 +634,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "#We first reduce the dataframe to only the elements that interest us and we sort them according to the date\n",
     "wa=wa.loc[:,['date','subject_age','subject_race','subject_sex','search_conducted']]\n",
-    "wa=wa.sort_values(by=['date'])\n"
+    "wa=wa.sort_values(by=['date'])\n",
+    "\n",
+    "wa['year']=(date_.year() for date_ in wa.date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prep_data_frame(dataFrame, legislation_date, drop_element):\n",
+    "def prep_data_frame(dataframe, legislation_date, drop_element):\n",
     "    #We want to repeat this action for every dataframe we might use so we programmed this function\n",
     "    \n",
-    "    #As the dataframe is sorted the year of the first element and the year of the las element\n",
+    "    #As the dataframe is sorted the year of the first element and the year of the last element\n",
     "    #should respectively be the first and the last year of the dataset\n",
-    "    begin_year=dataFrame.date.iloc[0].year\n",
-    "    end_year=dataFrame.date.iloc[-1].year\n",
+    "    begin_year=dataframe.date.iloc[0].year\n",
+    "    end_year=dataframe.date.iloc[-1].year\n",
     "    \n",
     "    #We first create a linear range without the borders\n",
     "    year_range=np.arange(begin_year+1,end_year,1)\n",
@@ -664,56 +666,36 @@
     "    #We then try to pair the years. If there is an odd amount of year we will drop the element specified\n",
     "    #in the \"drop_element\" variable.\n",
     "    \n",
-    "    calculate_length=len(year_range)\n",
-    "    #in our calculations we have to take out the legislation date which wont be shown in our final dataset\n",
-    "    if legislation_date !=-1:\n",
-    "        calculate_length=calculate_length-1\n",
-    "    \n",
     "    #If the amount of years is even we set the drop_element to -1 so no element will be dropped\n",
-    "    if calculate_length%2 == 0:\n",
+    "    if len(year_range)%2 == 0:\n",
     "        drop_element=-1\n",
     "    \n",
     "    #we then go through the year_range vector and group the years two by two \n",
     "    k=0\n",
     "    for i in range(len(year_range)):\n",
-    "        if (year_range[i] != legislation_date ) and (i != drop_element):\n",
+    "        if i != drop_element:\n",
     "            if k== 0:\n",
-    "                time_intervals.append([year_range[i]])\n",
-    "                k=k+1\n",
+    "                if (year_range[i]!=legislation_date) and (year_range[i]-1 !=legislation_date):\n",
+    "                    time_intervals.append([year_range[i]])\n",
+    "                    k=k+1\n",
     "            elif k==1:\n",
-    "                k=0\n",
-    "                time_intervals[-1].append(year_range[i])\n",
+    "                if (year_range[i]!= legislation_date) and (year_range[i]-1 !=legislation_date):\n",
+    "                    k=0\n",
+    "                    time_intervals[-1].append(year_range[i])\n",
     "            \n",
-    "    print(time_intervals)"
+    "    #We can now create the different dataframes\n",
+    "    dataframes=[]    \n",
+    "    for time_interval in time_intervals:\n",
+    "        dataframes.append(dataframe.loc[(dataframe.year==time_interval[0]) & (dataframe.year==time_interval[1] )])\n",
+    "    dataframes[0].head()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "tic2011\n",
-      "2\n",
-      "3\n",
-      "tac2013\n",
-      "4\n",
-      "tic2014\n",
-      "5\n",
-      "tac2015\n",
-      "6\n",
-      "tic2016\n",
-      "7\n",
-      "tac2017\n",
-      "[[2011, 2013], [2014, 2015], [2016, 2017]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prep_data_frame(wa, wa_legalization_year, 0)"
    ]
