--- a/milestone_4.ipynb
+++ b/milestone_4.ipynb
@@ -634,24 +634,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#We first reduce the dataframe to only the elements that interest us and we sort them according to the date\n",
-    "wa=wa.loc[:,['date','subject_age','subject_race','subject_sex','search_conducted']]\n",
-    "wa=wa.sort_values(by=['date'])\n",
+    "wa_reduced=wa.loc[:,['date','subject_age','subject_race','subject_sex','search_conducted']]\n",
+    "wa_reduced = wa_reduced.dropna()\n",
+    "wa_reduced=wa_reduced.sort_values(by=['date'])\n",
     "\n",
-    "wa['year']=(date_.year() for date_ in wa.date)"
+    "wa_reduced['year']=(date_.year() for date_ in wa_reduced.date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also want to drop all races that are not white, hispanic, or black\n",
+    "Also all sexes that are not male or female (I did not notice any, but this is just a precaution)\n",
+    "This is for simplification purposes, and also to fit the study results as well as possible "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prep_data_frame(dataframe, legislation_date, drop_element):\n",
+    "wa_reduced = wa_reduced[wa_reduced['subject_race'].isin(['black','hispanic','white'])]\n",
+    "wa_reduced = wa_reduced[wa_reduced['subject_sex'].isin(['male','female'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intervals_from_dataframe(dataframe, legislation_date, drop_element):\n",
     "    #We want to repeat this action for every dataframe we might use so we programmed this function\n",
     "    \n",
     "    #As the dataframe is sorted the year of the first element and the year of the last element\n",
@@ -682,13 +702,30 @@
     "                if (year_range[i]!= legislation_date) and (year_range[i]-1 !=legislation_date):\n",
     "                    k=0\n",
     "                    time_intervals[-1].append(year_range[i])\n",
-    "            \n",
+    "    return time_intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prep_from_time_intervals(dataframe,time_intervals):\n",
     "    #We can now create the different dataframes\n",
     "    dataframes=[]    \n",
     "    for time_interval in time_intervals:\n",
     "        dataframes.append(dataframe.loc[(dataframe.year==time_interval[0]) & (dataframe.year==time_interval[1] )])\n",
-    "    dataframes[0].head()\n",
-    "    "
+    "    return dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_intervals=intervals_from_dataframe(wa_reduced, wa_legalization_year, 0)"
    ]
   },
   {
@@ -697,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_data_frame(wa, wa_legalization_year, 0)"
+    "wa_collection=prep_from_time_intervals(wa_reduced, time_intervals)"
    ]
   },
   {
@@ -721,208 +758,7 @@
     "A validation set to tune our hyperparameters\n",
     "A testing set to check our results on \"never seen before\" data\n",
     "\n",
-    "Since the dataset is so big, we will only use 10% of it as testing and 10% of it as validation.\n",
-    "\n",
-    "First we will reduce our dataset to only the interest parameters, while also dropping rows with incomplete values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subject_age</th>\n",
-       "      <th>subject_race</th>\n",
-       "      <th>subject_sex</th>\n",
-       "      <th>pre_legalization</th>\n",
-       "      <th>years_after_legalization</th>\n",
-       "      <th>search_conducted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>29.0</td>\n",
-       "      <td>black</td>\n",
-       "      <td>male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>25.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>female</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333390</th>\n",
-       "      <td>55.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.783562</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333391</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>female</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.797260</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333392</th>\n",
-       "      <td>28.0</td>\n",
-       "      <td>asian/pacific islander</td>\n",
-       "      <td>female</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.800000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333393</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>hispanic</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.800000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333395</th>\n",
-       "      <td>60.0</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.802740</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8113590 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          subject_age            subject_race subject_sex  pre_legalization  \\\n",
-       "0                30.0                   white        male              True   \n",
-       "1                29.0                   black        male              True   \n",
-       "2                25.0                   white        male              True   \n",
-       "3                19.0                   white      female              True   \n",
-       "4                25.0                   white        male              True   \n",
-       "...               ...                     ...         ...               ...   \n",
-       "11333390         55.0                   white        male             False   \n",
-       "11333391         44.0                   white      female             False   \n",
-       "11333392         28.0  asian/pacific islander      female             False   \n",
-       "11333393         35.0                hispanic        male             False   \n",
-       "11333395         60.0                   white        male             False   \n",
-       "\n",
-       "          years_after_legalization  search_conducted  \n",
-       "0                         0.000000             False  \n",
-       "1                         0.000000             False  \n",
-       "2                         0.000000             False  \n",
-       "3                         0.000000             False  \n",
-       "4                         0.000000             False  \n",
-       "...                            ...               ...  \n",
-       "11333390                  5.783562             False  \n",
-       "11333391                  5.797260             False  \n",
-       "11333392                  5.800000             False  \n",
-       "11333393                  5.800000             False  \n",
-       "11333395                  5.802740             False  \n",
-       "\n",
-       "[8113590 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wa_reduced = wa[['subject_age','subject_race','subject_sex','pre_legalization','years_after_legalization','search_conducted']]\n",
-    "wa_reduced = wa_reduced.dropna()\n",
-    "wa_reduced"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We also want to drop all races that are not white, hispanic, or black\n",
-    "Also all sexes that are not male or female (I did not notice any, but this is just a precaution)\n",
-    "This is for simplification purposes, and also to fit the study results as well as possible "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wa_reduced = wa_reduced[wa_reduced['subject_race'].isin(['black','hispanic','white'])]\n",
-    "wa_reduced = wa_reduced[wa_reduced['subject_sex'].isin(['male','female'])]"
+    "Since the dataset is so big, we will only use 10% of it as testing and 10% of it as validation.\n"
    ]
   },
   {
@@ -932,194 +768,70 @@
     "Unfortunately, sklearn does not handle categorical values for decision trees.\n",
     "\n",
     "Hence, we have to use label encoding to switch categorical values into numerical values.\n",
-    "We will also turn our pre_legalization and search_conducted values to binary"
+    "We will also turn our search_conducted values to binary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will repeat all this on all time intervals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subject_age</th>\n",
-       "      <th>subject_race</th>\n",
-       "      <th>subject_sex</th>\n",
-       "      <th>pre_legalization</th>\n",
-       "      <th>years_after_legalization</th>\n",
-       "      <th>search_conducted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>25.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333389</th>\n",
-       "      <td>57.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.783562</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333390</th>\n",
-       "      <td>55.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.783562</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333391</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.797260</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333393</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.800000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11333395</th>\n",
-       "      <td>60.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.802740</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7461502 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          subject_age  subject_race  subject_sex  pre_legalization  \\\n",
-       "0                30.0             2            1                 1   \n",
-       "1                29.0             0            1                 1   \n",
-       "2                25.0             2            1                 1   \n",
-       "3                19.0             2            0                 1   \n",
-       "4                25.0             2            1                 1   \n",
-       "...               ...           ...          ...               ...   \n",
-       "11333389         57.0             2            1                 0   \n",
-       "11333390         55.0             2            1                 0   \n",
-       "11333391         44.0             2            0                 0   \n",
-       "11333393         35.0             1            1                 0   \n",
-       "11333395         60.0             2            1                 0   \n",
-       "\n",
-       "          years_after_legalization  search_conducted  \n",
-       "0                         0.000000                 0  \n",
-       "1                         0.000000                 0  \n",
-       "2                         0.000000                 0  \n",
-       "3                         0.000000                 0  \n",
-       "4                         0.000000                 0  \n",
-       "...                            ...               ...  \n",
-       "11333389                  5.783562                 0  \n",
-       "11333390                  5.783562                 0  \n",
-       "11333391                  5.797260                 0  \n",
-       "11333393                  5.800000                 0  \n",
-       "11333395                  5.802740                 0  \n",
-       "\n",
-       "[7461502 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "LE_race = preprocessing.LabelEncoder()\n",
-    "LE_sex = preprocessing.LabelEncoder()\n",
+    "print(len(time_intervals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_encoding (df):\n",
+    "    LE_race = preprocessing.LabelEncoder()\n",
+    "    LE_sex = preprocessing.LabelEncoder()\n",
     "\n",
-    "wa_reduced['subject_race'] = LE_race.fit_transform(wa_reduced['subject_race'])\n",
-    "wa_reduced['subject_sex'] = LE_sex.fit_transform(wa_reduced['subject_sex'])\n",
+    "    df['subject_race'] = LE_race.fit_transform(df['subject_race'])\n",
+    "    df['subject_sex'] = LE_sex.fit_transform(df['subject_sex'])\n",
     "\n",
-    "wa_reduced['pre_legalization'] =  wa['pre_legalization'].astype(int)\n",
-    "wa_reduced['search_conducted'] = wa['search_conducted'].astype(int)\n",
+    "    df['search_conducted'] = df['search_conducted'].astype(int)\n",
     "\n",
-    "wa_reduced"
+    "    print(df)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wa_collection[0]=label_encoding(wa_collection[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wa_collection[1]=label_encoding(wa_collection[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wa_collection[2]=label_encoding(wa_collection[2])"
    ]
   },
   {
