--- a/milestone_4.ipynb
+++ b/milestone_4.ipynb
@@ -1229,90 +1229,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(estimator=DecisionTreeClassifier(),\n",
+       "             param_grid={'criterion': ('gini', 'entropy'), 'max_depth': [1, 10],\n",
+       "                         'splitter': ('best', 'random')},\n",
+       "             scoring='precision')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "grid_searches=[]\n",
-    "for sets in wa_sets: \n",
-    "    WA_tree = DecisionTreeClassifier()\n",
-    "\n",
-    "    parameters = {'criterion' : ('gini','entropy'), 'splitter' : ('best','random'), 'max_depth'  : [1,10]}\n",
-    "    new_GS = GridSearchCV(WA_tree, parameters, scoring = 'precision')\n",
-    "    new_GS.fit(sets[4], sets[5])\n",
-    "    grid_searches.append(new_GS)"
+    "WA_tree = DecisionTreeClassifier()\n",
+    "parameters = {'criterion' : ('gini','entropy'), 'splitter' : ('best','random'), 'max_depth'  : [1,10]}\n",
+    "GS_WA = GridSearchCV(WA_tree, parameters, scoring = 'precision')\n",
+    "GS_WA.fit(X_val,Y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time interval :2010-2011\n",
       "Best criterion: gini\n",
       "Best splitter: best\n",
-      "{'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 1, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'presort': 'deprecated', 'random_state': None, 'splitter': 'best'}\n",
-      "\n",
-      "Time interval :2014-2015\n",
-      "Best criterion: gini\n",
-      "Best splitter: best\n",
-      "{'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 1, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'presort': 'deprecated', 'random_state': None, 'splitter': 'best'}\n",
-      "\n",
-      "Time interval :2016-2017\n",
-      "Best criterion: gini\n",
-      "Best splitter: best\n",
-      "{'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 1, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'presort': 'deprecated', 'random_state': None, 'splitter': 'best'}\n",
-      "\n"
+      "{'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 1, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'presort': 'deprecated', 'random_state': None, 'splitter': 'best'}\n"
      ]
     }
    ],
    "source": [
-    "for i in range(len(grid_searches)):\n",
-    "    print(\"Time interval :\"+ str(time_intervals[i][0]) + \"-\" + str(time_intervals[i][1]))\n",
-    "    print('Best criterion:', grid_searches[i].best_estimator_.get_params()['criterion'])\n",
-    "    print('Best splitter:',  grid_searches[i].best_estimator_.get_params()['splitter'])\n",
-    "    print(grid_searches[i].best_estimator_.get_params(['WA_tree']))\n",
-    "    print()"
+    "print('Best criterion:', GS_WA.best_estimator_.get_params()['criterion'])\n",
+    "print('Best splitter:',  GS_WA.best_estimator_.get_params()['splitter'])\n",
+    "print(GS_WA.best_estimator_.get_params(['WA_tree']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#WA_tree = GS_WA.best_estimator_.fit(X_train,Y_train)"
+    "WA_tree = GS_WA.best_estimator_.fit(X_train,Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on training set: 0.967\n",
+      "Precision on training set: 0.483\n",
+      "Recall on training set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(\"Accuracy on training set: {:.3f}\".format(WA_tree.score(X_train,Y_train)))\n",
-    "#print(\"Precision on training set: {:.3f}\".format(precision_score(Y_train,WA_tree.predict(X_train), average = 'macro')))\n",
-    "#print(\"Recall on training set: {:.3f}\".format(recall_score(Y_train,WA_tree.predict(X_train), average = 'macro')))"
+    "print(\"Accuracy on training set: {:.3f}\".format(WA_tree.score(X_train,Y_train)))\n",
+    "print(\"Precision on training set: {:.3f}\".format(precision_score(Y_train,WA_tree.predict(X_train), average = 'macro')))\n",
+    "print(\"Recall on training set: {:.3f}\".format(recall_score(Y_train,WA_tree.predict(X_train), average = 'macro')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on testing set: 0.967\n",
+      "Precision on testing set: 0.483\n",
+      "Recall on testing set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(\"Accuracy on testing set: {:.3f}\".format(WA_tree.score(X_test,Y_test)))\n",
-    "#print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree.predict(X_test), average = 'macro')))\n",
-    "#print(\"Recall on testing set: {:.3f}\".format(recall_score(Y_test,WA_tree.predict(X_test), average = 'macro')))"
+    "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree.score(X_test,Y_test)))\n",
+    "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree.predict(X_test), average = 'macro')))\n",
+    "print(\"Recall on testing set: {:.3f}\".format(recall_score(Y_test,WA_tree.predict(X_test), average = 'macro')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
